--- a/cee-news-parser-impl/pom.xml
+++ b/cee-news-parser-impl/pom.xml
@@ -35,6 +35,10 @@
 			<groupId>net.java.dev.rome</groupId>
 			<artifactId>rome</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+		</dependency>
 		
 		<!-- testing -->
 		<dependency>
