--- a/jetty-starter/pom.xml
+++ b/jetty-starter/pom.xml
@@ -30,6 +30,10 @@
 	<dependencies>
 		<!-- external -->
 		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+		</dependency>
+		<dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
