--- a/newsreader/pom.xml
+++ b/newsreader/pom.xml
@@ -25,8 +25,13 @@
 			                <mainClass>org.eclipse.jetty.Starter</mainClass>
 			            </manifest>
 			        </archive>
-			        <packagingExcludes>WEB-INF/lib/jetty-*.jar</packagingExcludes>
+			        <packagingExcludes>WEB-INF/lib/jetty-*.jar,WEB-INF/lib/commons-cli-*.jar</packagingExcludes>
 			        <overlays>
+			        	<overlay>
+			        		<groupId>commons-cli</groupId>
+							<artifactId>commons-cli</artifactId>
+			            	<type>jar</type>
+			            </overlay>
 			            <overlay>
 			                <groupId>com.cee</groupId>
 							<artifactId>jetty-starter</artifactId>
@@ -96,6 +101,11 @@
 	<dependencies>
 	
 		<!-- internal -->
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<type>jar</type>
+		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
 			<artifactId>cee-news-webreader</artifactId>
