ASSIGNED - # 246: Test Suite for Search and Store Backend http://www.andreasbehnke.com/mantis/view.php?id=246

--- a/cee-news-store-jcr/pom.xml
+++ b/cee-news-store-jcr/pom.xml
@@ -38,8 +38,8 @@
 
 		<!-- testing -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<groupId>com.cee</groupId>
+			<artifactId>cee-news-store-test-suite</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
