--- a/newsreader/pom.xml
+++ b/newsreader/pom.xml
@@ -102,11 +102,6 @@
 	
 		<!-- internal -->
 		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<type>jar</type>
-		</dependency>
-		<dependency>
 			<groupId>com.cee</groupId>
 			<artifactId>cee-news-webreader</artifactId>
 			<type>war</type>
@@ -116,6 +111,13 @@
 			<artifactId>jetty-starter</artifactId>
 			<type>jar</type>
 		</dependency>
+		
+		<!-- external -->
+		<dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <type>jar</type>
+        </dependency>
 		<dependency>
 	        <groupId>javax.servlet</groupId>
 	        <artifactId>javax.servlet-api</artifactId>
