ASSIGNED - # 269: Split Spring Configuration, optimize scopes http://www.andreasbehnke.com/mantis/view.php?id=269 ASSIGNED - # 266: Implement Lucene SiteStore http://www.andreasbehnke.com/mantis/view.php?id=266

--- a/cee-news-store-lucene/pom.xml
+++ b/cee-news-store-lucene/pom.xml
@@ -23,6 +23,10 @@
 		</dependency>
 
 		<!-- external -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+		</dependency>
 
 		<!-- testing -->
 		<dependency>
