--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,11 @@
 				<version>${jackrabbit.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.lucene</groupId>
+				<artifactId>lucene-core</artifactId>
+				<version>4.3.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.ccil.cowan.tagsoup</groupId>
 				<artifactId>tagsoup</artifactId>
 				<version>1.2</version>
