ASSIGNED - # 266: Implement Lucene SiteStore http://www.andreasbehnke.com/mantis/view.php?id=266

--- a/cee-news-store-lucene/pom.xml
+++ b/cee-news-store-lucene/pom.xml
@@ -24,6 +24,14 @@
 
 		<!-- external -->
 		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		</dependency>
+		<dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
 		</dependency>
