--- a/cee-news-store-lucene/pom.xml
+++ b/cee-news-store-lucene/pom.xml
@@ -11,6 +11,10 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
+	<properties>
+        <lucene.version>4.3.0</lucene.version>
+	</properties>
+	
 	<dependencies>
 		<!-- internal -->
 		<dependency>
@@ -30,12 +34,13 @@
 		<dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-analyzers-common</artifactId>
+            <version>${lucene.version}</version>
         </dependency>
-		<dependency>
-			<groupId>org.apache.lucene</groupId>
-			<artifactId>lucene-core</artifactId>
-		</dependency>
-
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
 		<!-- testing -->
 		<dependency>
 			<groupId>com.cee</groupId>
