--- a/cee-news-webreader/src/main/webapp/WEB-INF/web.xml
+++ b/cee-news-webreader/src/main/webapp/WEB-INF/web.xml
@@ -13,15 +13,23 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
-	<!-- SpringGwt remote service servlet -->
 	<servlet>
 		<servlet-name>springGwtRemoteServiceServlet</servlet-name>
 		<servlet-class>org.spring4gwt.server.SpringGwtRemoteServiceServlet</servlet-class>
 	</servlet>
+	<servlet>
+	    <servlet-name>contentHighlightHandler</servlet-name>
+	    <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>springGwtRemoteServiceServlet</servlet-name>
 		<url-pattern>/NewsReader/services/*</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+        <servlet-name>contentHighlightHandler</servlet-name>
+        <url-pattern>/NewsReader/content/highlight/*</url-pattern>
+    </servlet-mapping>
 	
 	<welcome-file-list>
 		<welcome-file>NewsReader.html</welcome-file>
