--- a/pom.xml
+++ b/pom.xml
@@ -390,42 +390,11 @@
 				<version>1.1</version>
 			</dependency>
 			<dependency>
-			    <groupId>org.springbyexample</groupId>
-			    <artifactId>org.springbyexample.threadscope</artifactId>
-			    <version>1.0.1</version>
-			    <exclusions>
-			    	<!-- Excluce old 3.0.0 spring version and some ugly stuff -->
-			    	<exclusion>
-			    		<groupId>org.springframework</groupId>
-			    		<artifactId>org.springframework.beans</artifactId>
-			    	</exclusion>
-			    	<exclusion>
-			    		<groupId>org.springframework</groupId>
-			    		<artifactId>org.springframework.context</artifactId>
-			    	</exclusion>
-			    	<exclusion>
-			    		<groupId>org.springframework</groupId>
-			    		<artifactId>org.springframework.context.support</artifactId>
-			    	</exclusion>
-			    	<exclusion>
-			    		<groupId>org.springframework</groupId>
-			    		<artifactId>org.springframework.core</artifactId>
-			    	</exclusion>
-			    	<exclusion>
-			    		<groupId>org.springframework</groupId>
-			    		<artifactId>org.springframework.core</artifactId>
-			    	</exclusion>
-			    	<exclusion>
-			    		<groupId>org.apache.commons</groupId>
-						<artifactId>com.springsource.org.apache.commons.collections</artifactId>
-					</exclusion>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>com.springsource.slf4j.api</artifactId>
-					</exclusion>
-			    </exclusions>
-			</dependency>
-			<dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-web</artifactId>
 				<version>${spring.version}</version>
