--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,11 @@
 				<version>1.9.14</version>
 			</dependency>
 			<dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>3.1</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>4.1.2</version>
