--- a/cee-news-parser-impl/pom.xml
+++ b/cee-news-parser-impl/pom.xml
@@ -33,6 +33,10 @@
 			<artifactId>commons-io</artifactId>
 		</dependency>
         <dependency>
+            <groupId>com.cybozu.labs</groupId>
+            <artifactId>langdetect</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
