--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
 				<version>2.1</version>
 			</dependency>
 			<dependency>
+                <groupId>com.cybozu.labs</groupId>
+                <artifactId>langdetect</artifactId>
+                <version>1.1-20120112</version>
+            </dependency>
+			<dependency>
                 <groupId>com.google.code.gson</groupId>
                 <artifactId>gson</artifactId>
                 <version>2.2.4</version>
