introduced profiles for the different backend store implementations

--- a/cee-news-store-jcr/pom.xml
+++ b/cee-news-store-jcr/pom.xml
@@ -1,16 +1,17 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>cee-news-store-jcr</artifactId>
 	<name>Content Extraction Engine - News Store JCR</name>
 	<description>JCR implementation of the news store API</description>
-	
+
 	<parent>
 		<groupId>com.cee</groupId>
 		<artifactId>cee</artifactId>
 		<version>1.7-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
-	
+
 	<dependencies>
 		<!-- internal -->
 		<dependency>
@@ -32,6 +33,11 @@
 			<artifactId>jackrabbit-jcr-commons</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.jackrabbit</groupId>
+			<artifactId>jackrabbit-core</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
@@ -50,11 +56,6 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.jackrabbit</groupId>
-			<artifactId>jackrabbit-core</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
