--- a/pom.xml
+++ b/pom.xml
@@ -8,9 +8,9 @@
 	<description>Framework for extracting content from documents and websites</description>
 	<packaging>pom</packaging>
 	<properties>
-		<jdk.version>1.7</jdk.version>
-		
 		<!-- dependency versions -->
+		<!-- java version -->
+		<jdk.version>1.7</jdk.version>
 		<gwt.version>2.5.1</gwt.version>
 		<spring.version>3.1.0.RELEASE</spring.version>
 		<slf4j.version>1.6.4</slf4j.version>
@@ -75,6 +75,109 @@
 
 		</plugins>
 	</build>
+	
+	<profiles>
+		<profile>
+			<!--
+			****************************** 
+			* JCR Store Backend          *
+			******************************
+			-->
+			<id>jcr</id>
+			<activation>
+				<property>
+					<name>store</name>
+					<value>jcr</value>
+				</property>
+			</activation>
+			<modules>
+				<module>cee-news-store-jcr</module>
+			</modules>
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>com.cee</groupId>
+						<artifactId>cee-news-store-jcr</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>javax.jcr</groupId>
+						<artifactId>jcr</artifactId>
+						<version>2.0</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.jackrabbit</groupId>
+						<artifactId>jackrabbit-core</artifactId>
+						<version>${jackrabbit.version}</version>
+						<exclusions>
+							<exclusion>
+								<groupId>org.slf4j</groupId>
+								<artifactId>jcl-over-slf4j</artifactId>
+							</exclusion>
+							<exclusion>
+								 <groupId>rome</groupId>
+								 <artifactId>rome</artifactId>
+							</exclusion>
+						</exclusions>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.jackrabbit</groupId>
+						<artifactId>jackrabbit-jcr-commons</artifactId>
+						<version>${jackrabbit.version}</version>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
+		</profile>
+		<profile>
+			<!--
+			****************************** 
+			* Lucene Store Backend       *
+			******************************
+			-->
+			<id>lucene</id>
+			<activation>
+				<property>
+					<name>store</name>
+					<value>lucene</value>
+				</property>
+			</activation>
+			<properties>
+		        <lucene.version>4.3.0</lucene.version>
+			</properties>
+			<modules>
+				<module>cee-news-store-lucene</module>
+			</modules>
+			<dependencyManagement>
+				<dependencies>
+					<dependency>
+						<groupId>com.cee</groupId>
+						<artifactId>cee-news-store-lucene</artifactId>
+						<version>${project.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>com.google.code.gson</groupId>
+						<artifactId>gson</artifactId>
+						<version>2.2.4</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.lucene</groupId>
+						<artifactId>lucene-analyzers-common</artifactId>
+						<version>${lucene.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.lucene</groupId>
+						<artifactId>lucene-core</artifactId>
+						<version>${lucene.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.lucene</groupId>
+						<artifactId>lucene-queryparser</artifactId>
+						<version>${lucene.version}</version>
+					</dependency>
+				</dependencies>
+			</dependencyManagement>
+		</profile>
+	</profiles>
 
 	<modules>
 		<module>cee-news-parser</module>
@@ -82,8 +185,6 @@
 		<module>cee-news-store-api</module>
 		<module>cee-news-search-api</module>
 		<module>cee-news-store-test-suite</module>
-		<module>cee-news-store-jcr</module>
-		<module>cee-news-store-lucene</module>
 		<module>cee-news-webreader</module>
 		<module>cee-news-webreader-tomcat6</module>
 		<module>cee-news-webreader-jetty7</module>
@@ -132,16 +233,6 @@
 			</dependency>
 			<dependency>
 				<groupId>com.cee</groupId>
-				<artifactId>cee-news-store-jcr</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.cee</groupId>
-				<artifactId>cee-news-store-lucene</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.cee</groupId>
 				<artifactId>cee-news-test-web</artifactId>
 				<version>${project.version}</version>
 				<type>war</type>
@@ -171,13 +262,13 @@
 				<type>war</type>
 			</dependency>
 			<!-- external -->
-			<dependency>
+			<!-- dependency>
 				<groupId>cglib</groupId>
 				<artifactId>cglib</artifactId>
 				<version>2.2</version>
 				<type>jar</type>
 				<scope>compile</scope>
-			</dependency>
+			</dependency -->
 			<dependency>
 				<groupId>commons-cli</groupId>
 				<artifactId>commons-cli</artifactId>
@@ -192,11 +283,6 @@
                 <groupId>com.cybozu.labs</groupId>
                 <artifactId>langdetect</artifactId>
                 <version>1.1-20120112</version>
-            </dependency>
-			<dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>2.2.4</version>
             </dependency>
 			<dependency>
 				<groupId>com.google.gwt</groupId>
@@ -246,14 +332,9 @@
 				<version>1.2.0</version>
 			</dependency>
 			<dependency>
-				<groupId>javax.jcr</groupId>
-				<artifactId>jcr</artifactId>
-				<version>2.0</version>
-			</dependency>
-			<dependency>
-			        <groupId>javax.servlet</groupId>
-			        <artifactId>javax.servlet-api</artifactId>
-			        <version>3.0.1</version>
+		        <groupId>javax.servlet</groupId>
+		        <artifactId>javax.servlet-api</artifactId>
+		        <version>3.0.1</version>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
@@ -279,26 +360,6 @@
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>4.1.2</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.jackrabbit</groupId>
-				<artifactId>jackrabbit-core</artifactId>
-				<version>${jackrabbit.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.slf4j</groupId>
-						<artifactId>jcl-over-slf4j</artifactId>
-					</exclusion>
-					<exclusion>
-						 <groupId>rome</groupId>
-						 <artifactId>rome</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.jackrabbit</groupId>
-				<artifactId>jackrabbit-jcr-commons</artifactId>
-				<version>${jackrabbit.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.ccil.cowan.tagsoup</groupId>
