activated profile lucene by default

--- a/cee-news-webreader/pom.xml
+++ b/cee-news-webreader/pom.xml
@@ -41,6 +41,7 @@
 		<profile>
 			<id>lucene</id>
 			<activation>
+				<activeByDefault>true</activeByDefault>
 				<property>
 					<name>store</name>
 					<value>lucene</value>
