added repositories renamed projects

--- a/cee-parser/pom.xml
+++ b/cee-parser/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>cee-news-parser</artifactId>
+	<artifactId>cee-parser</artifactId>
 	<name>Content Extraction Engine - News Parser</name>
 	<description>Parsers and extension API used for content extraction from news pages</description>
 	
@@ -16,7 +16,7 @@
 		<!-- internal -->
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-news-store-api</artifactId>
+			<artifactId>cee-store-api</artifactId>
 		</dependency>
 		
 		<!-- external -->
