--- a/cee-store-lucene/pom.xml
+++ b/cee-store-lucene/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>cee-news-store-lucene</artifactId>
+	<artifactId>cee-store-lucene</artifactId>
 	<name>Content Extraction Engine - News Store Lucene</name>
 	<description>Lucene implementation of the news store and search API</description>
 	
@@ -15,11 +15,11 @@
 		<!-- internal -->
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-news-search-api</artifactId>
+			<artifactId>cee-search-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-news-store-api</artifactId>
+			<artifactId>cee-store-api</artifactId>
 		</dependency>
 
 		<!-- external -->
@@ -46,7 +46,7 @@
 		<!-- testing -->
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-news-store-test-suite</artifactId>
+			<artifactId>cee-store-test-suite</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
