--- a/cee-store-test-suite/pom.xml
+++ b/cee-store-test-suite/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>cee-news-store-test-suite</artifactId>
+	<artifactId>cee-store-test-suite</artifactId>
 	<name>Content Extraction Engine - News Store Test Suite</name>
 	<description>Provides a test suite for all CEE store implementations</description>
 	
@@ -15,11 +15,11 @@
 		<!-- internal -->
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-news-search-api</artifactId>
+			<artifactId>cee-search-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-news-store-api</artifactId>
+			<artifactId>cee-store-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
