--- a/cee-webreader-tomcat/pom.xml
+++ b/cee-webreader-tomcat/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>cee-news-webreader-tomcat6</artifactId>
+	<artifactId>cee-webreader-tomcat</artifactId>
 	<packaging>war</packaging>
 	<name>News Reader - Tomcat 6 Bundle</name>
 		
@@ -18,7 +18,7 @@
 		<!-- internal -->
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-news-webreader</artifactId>
+			<artifactId>cee-webreader</artifactId>
 			<type>war</type>
 		</dependency>
 		
