--- a/cee-store-jcr/pom.xml
+++ b/cee-store-jcr/pom.xml
@@ -48,6 +48,21 @@
 			<artifactId>cee-store-test-suite</artifactId>
 			<scope>test</scope>
 		</dependency>
+				<dependency>
+            <groupId>com.sourceallies.beanoh</groupId>
+            <artifactId>beanoh</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <scope>test</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
