--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
 	<version>1.7-SNAPSHOT</version>
 	<name>Content Extraction Engine</name>
 	<description>Framework for extracting content from documents and websites</description>
+	<inceptionYear>2013</inceptionYear>
+	<organization>
+		<name>Andreas Behnke</name>
+	</organization>
 	<packaging>pom</packaging>
 	<properties>
 		<!-- dependency versions -->
@@ -77,6 +81,21 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.1.1</version>
+			</plugin>
+		
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>license-maven-plugin</artifactId>
+				<version>1.5</version>
+				<configuration>
+					<verbose>false</verbose>
+					<licenseName>apache_v2</licenseName>
+					<roots>
+						<root>src/main/java</root>
+						<root>src/main/resources</root>
+						<root>src/test/java</root>
+					</roots>
+				</configuration>
 			</plugin>
 
 		</plugins>
