--- a/cee-webreader-tomcat/pom.xml
+++ b/cee-webreader-tomcat/pom.xml
@@ -25,11 +25,7 @@
 		<!-- external -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>apache-log4j-extras</artifactId>
+			<artifactId>slf4j-jdk14</artifactId>
 		</dependency>
 	</dependencies>
 </project>
