--- a/cee-webreader/pom.xml
+++ b/cee-webreader/pom.xml
@@ -74,6 +74,17 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
+			<artifactId>cee-client-api</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cee</groupId>
+			<artifactId>cee-client-api</artifactId>
+			<classifier>sources</classifier>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cee</groupId>
 			<artifactId>cee-parser</artifactId>
 			<type>jar</type>
 			<scope>compile</scope>
