Moved site services to client API

--- a/cee-processing/pom.xml
+++ b/cee-processing/pom.xml
@@ -20,6 +20,10 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
+			<artifactId>cee-client-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.cee</groupId>
 			<artifactId>cee-parser</artifactId>
 		</dependency>
 		
