Implemented spring based di for jersey REST services

--- a/cee-rest/src/main/webapp/WEB-INF/web.xml
+++ b/cee-rest/src/main/webapp/WEB-INF/web.xml
@@ -1,38 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app>
-	
+
 	<!-- Spring context -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath://applicationContext.xml</param-value>
 	</context-param>
 	<listener>
-    	<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
-  	</listener>
-	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
 	<servlet>
-		<servlet-name>springGwtRemoteServiceServlet</servlet-name>
-		<servlet-class>org.spring4gwt.server.SpringGwtRemoteServiceServlet</servlet-class>
+		<servlet-name>Jersey REST Service</servlet-name>
+		<servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
+		<!-- Register application -->
+		<init-param>
+            <param-name>javax.ws.rs.Application</param-name>
+            <param-value>org.cee.rest.CeeResourceConfig</param-value>
+        </init-param>
+		<!-- load-on-startup>1</load-on-startup -->
 	</servlet>
-	<servlet>
-	    <servlet-name>contentHighlightHandler</servlet-name>
-	    <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
-	</servlet>
-	
 	<servlet-mapping>
-		<servlet-name>springGwtRemoteServiceServlet</servlet-name>
-		<url-pattern>/NewsReader/services/*</url-pattern>
+		<servlet-name>Jersey REST Service</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
-	<servlet-mapping>
-        <servlet-name>contentHighlightHandler</servlet-name>
-        <url-pattern>/NewsReader/content/highlight/*</url-pattern>
-    </servlet-mapping>
-	
-	<welcome-file-list>
-		<welcome-file>NewsReader.html</welcome-file>
-	</welcome-file-list>
-	
+
 </web-app>
