--- a/webreader/pom.xml
+++ b/webreader/pom.xml
@@ -103,7 +103,7 @@
 		<!-- internal -->
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-webreader</artifactId>
+			<artifactId>cee-rest</artifactId>
 			<type>war</type>
 		</dependency>
 		<dependency>
