Added new module service to remove bussiness logic from client layer. Added working set service.

--- a/cee-webreader/pom.xml
+++ b/cee-webreader/pom.xml
@@ -103,6 +103,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
+			<artifactId>cee-service</artifactId>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.cee</groupId>
 			<artifactId>cee-parser-impl</artifactId>
 			<type>jar</type>
 			<scope>runtime</scope>
