--- a/cee-webreader/pom.xml
+++ b/cee-webreader/pom.xml
@@ -60,10 +60,11 @@
 
 	<dependencies>
 		<!-- internal -->
+		<!-- GWT sources -->
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-search-api</artifactId>
-			<type>jar</type>
+			<artifactId>cee-client-api</artifactId>
+			<classifier>sources</classifier>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -74,31 +75,16 @@
 		</dependency>
 		<dependency>
 			<groupId>com.cee</groupId>
-			<artifactId>cee-client-api</artifactId>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.cee</groupId>
-			<artifactId>cee-client-api</artifactId>
+			<artifactId>cee-processing</artifactId>
 			<classifier>sources</classifier>
 			<scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>com.cee</groupId>
-			<artifactId>cee-parser</artifactId>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
+		
+		<!-- binary -->
 		<dependency>
 			<groupId>com.cee</groupId>
 			<artifactId>cee-processing</artifactId>
 			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.cee</groupId>
-			<artifactId>cee-processing</artifactId>
-			<classifier>sources</classifier>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
