--- a/cee-rest/src/main/webapp/WEB-INF/web.xml
+++ b/cee-rest/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>Jersey REST Service</servlet-name>
-		<url-pattern>/rest/*</url-pattern>
+		<url-pattern>/v1/*</url-pattern>
 	</servlet-mapping>
 
 </web-app>
