WorkingSetResource API throws exceptions for validation and duplicate key errors which are mapped to http error codes

--- a/cee-rest/pom.xml
+++ b/cee-rest/pom.xml
@@ -92,6 +92,7 @@
 		<dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-spring3</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
