--- a/cee-rest/pom.xml
+++ b/cee-rest/pom.xml
@@ -82,6 +82,10 @@
 		    <artifactId>javax.ws.rs-api</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.glassfish.jersey.containers</groupId>
 			<artifactId>jersey-container-servlet-core</artifactId>
 		</dependency>
