--- a/cee-rest/src/main/webapp/WEB-INF/web.xml
+++ b/cee-rest/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,13 @@
 		<param-value>classpath://applicationContext.xml</param-value>
 	</context-param>
 	<listener>
+    	<listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+  	</listener>
+	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
+
 
 	<servlet>
 		<servlet-name>Jersey REST Service</servlet-name>
