Introduced javax.validation for working set

--- a/cee-client-api/pom.xml
+++ b/cee-client-api/pom.xml
@@ -17,6 +17,10 @@
 			<artifactId>cee-store-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
