--- a/pom.xml
+++ b/pom.xml
@@ -393,6 +393,11 @@
 		        <version>3.0.1</version>
 			</dependency>
 			<dependency>
+				<groupId>javax.validation</groupId>
+				<artifactId>validation-api</artifactId>
+				<version>1.1.0.Final</version>
+			</dependency>
+			<dependency>
 				<groupId>javax.ws.rs</groupId>
 		    		<artifactId>javax.ws.rs-api</artifactId>
 		    		<version>2.0.1</version>
