--- a/pom.xml
+++ b/pom.xml
@@ -428,6 +428,11 @@
 				<version>4.1.2</version>
 			</dependency>
 			<dependency>
+				<groupId>org.apache.bval</groupId>
+				<artifactId>org.apache.bval.bundle</artifactId>
+				<version>0.5</version>
+			</dependency>
+			<dependency>
 				<groupId>org.ccil.cowan.tagsoup</groupId>
 				<artifactId>tagsoup</artifactId>
 				<version>1.2.1</version>
