--- a/cee-store-api/pom.xml
+++ b/cee-store-api/pom.xml
@@ -11,6 +11,13 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+	</dependencies>
+	
 	<build>
 		<plugins>
 			<plugin>
