--- a/cee-rest/pom.xml
+++ b/cee-rest/pom.xml
@@ -99,6 +99,11 @@
 		    <artifactId>jersey-media-moxy</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.glassfish.jersey.ext</groupId>
 			<artifactId>jersey-spring3</artifactId>
 			<scope>compile</scope>
